--- a/app/globals.css
+++ b/app/globals.css
@@ -10,20 +10,24 @@
     sans-serif;
 }
 
+body {
+  overflow: hidden;
+}
+
 @layer utilities {
   .no-ring {
     @apply outline-none ring-0 ring-offset-0 focus:ring-0 focus:ring-offset-0 focus-visible:ring-offset-0 !important;
   }
 
   .input-ring {
-    @apply focus:ring-primary-green h-8 rounded-none border-none bg-transparent outline-none ring-offset-0 focus:ring-1 focus:ring-offset-0 focus-visible:ring-offset-0 !important;
+    @apply h-8 rounded-none border-none bg-transparent outline-none ring-offset-0 focus:ring-1 focus:ring-primary-green focus:ring-offset-0 focus-visible:ring-offset-0 !important;
   }
 
   .right-menu-content {
-    @apply bg-primary-black flex w-80 flex-col gap-y-1 border-none py-4 text-white !important;
+    @apply flex w-80 flex-col gap-y-1 border-none bg-primary-black py-4 text-white !important;
   }
 
   .right-menu-item {
-    @apply hover:bg-primary-grey-200 flex justify-between px-3 py-2 !important;
+    @apply flex justify-between px-3 py-2 hover:bg-primary-grey-200 !important;
   }
 }
